# GameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  GameEngine.sln  premake5.lua
GameEngine/: GameEngine.vcxproj  GameEngine.vcxproj.filters
GameEngine/src/: Engine.h  pch.h
GameEngine/src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
GameEngine/src/core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h  Window.h
GameEngine/src/core/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Sandbox/: Sandbox.vcxproj
Sandbox/src/: SandboxApp.cpp
docs/: README.md
docs/00_Overview/: 01_Doc_Standards.md  02_Architecture_Overview.md
docs/01_Core/: 01_EntryPoint_and_Lifecycle.md  02_Log_System.md  03_Event_System.md  04_Precompiled_Headers.md  05_Window_Abstraction.md
docs/99_Archive/: README.md
docs/99_Logs_and_Refactors/: README.md
